--- a/myapp/public/liveVideo.html
+++ b/myapp/public/liveVideo.html
@@ -2,9 +2,404 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>聊天室测试</title>
+    <link rel="stylesheet" href="./stylesheets/chartroom.css"/>
 </head>
+
 <body>
-<div>shabia </div>
+<div>
+    <div class="g-doc">
+        <button id="connect-sdk">登陆直播室</button>
+        <button id="create">创建房间</button>
+        <button id="open">开启摄像头</button>
+        <button id="change">切换角色</button>
+
+
+        <div id="chatroom-anonymous">
+            <button id="start">开启摄像头</button>
+        </div>
+        <div class="m-room" id="room">
+            <div class="g-left">
+                <div class="media" id="one">
+                    <img src="" class="hide">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="menu" class="m-menu" style="display:none">
+        <ul>
+            <li class="j-item j-kick" data-type="0" title="移除直播室">踢人</li>
+            <li class="j-item j-gag" data-type="1" title="禁止发言">禁言</li>
+            <li class="j-item j-black" data-type="2" title="永久不能进入该直播间">拉黑该用户</li>
+            <li class="j-item admin j-admin" data-type="3">任命管理员</li>
+        </ul>
+    </div>
+</div>
+<script src="./javascripts/NIM_Web_NIM_v5.0.0.js"></script>
+<script src="./javascripts/NIM_Web_WebRTC_v5.0.0.js"></script>
+<script src="./javascripts/js.cookie.js"></script>
+<script src="./javascripts/axios.js"></script>
+
+
+<script type="text/javascript">
+    var config={
+        //TpGuest
+        // ip:'http://192.168.0.133:8081',
+        //ttai
+        // ip:'http://192.168.43.172:8081',
+        // 外网
+        // ip:'https://www.wosieger.com'
+        //https
+        ip:'https://www.jiehuhu.top',
+        // https:'https://192.168.0.133'
+
+    }
+    var nim;
+    var netcall;
+    var $siegerRole = Cookies.get('siegerRole');//记录用户以何种对象登录
+    var $siegerToken = Cookies.get('siegerToken');//网站登录后的token
+    var $appkey;//购买的网易云服务的id，用来计费
+    var $userId;//自己数据库以及网易数据的id
+    var $wyToken;//网易云的token
+    window.onload = function () {
+        var param = new URLSearchParams();//https://www.jianshu.com/p/042632dec9fb 适配spring mvc
+        param.append("role", $siegerRole);
+        axios({
+            method: 'post',
+            url: config.ip + '/TtaiWeb/web/IM',
+            headers: {
+                'token': $siegerToken
+            },
+            data: param
+        })
+            .then(function (res) {
+                console.log(res.data)
+                $appkey=res.data.appkey;
+                $userId=res.data.userid;
+                $wyToken=res.data.token;
+            })
+
+
+        function connectSDK() {
+            var data = {};
+            // 注意这里, 引入的 SDK 文件不一样的话, 你可能需要使用 SDK.NIM.getInstance 来调用接口
+            var appkey = $appkey;
+            var account =  $userId//userid 每个用户在自己数据库与网易数据库一致
+            var token = $wyToken//网易token
+            nim = NIM.getInstance({
+                debug: true,
+                appKey: appkey,
+                account: account,
+                token: token,
+                onconnect: onConnect,
+                onwillreconnect: onWillReconnect,
+                ondisconnect: onDisconnect,
+                onerror: onError
+            });
+
+            function onConnect() {
+                console.log('连接成功');
+                //window.location.href = 'room?id=2008';
+            }
+
+            function onWillReconnect(obj) {
+                // 此时说明 SDK 已经断开连接, 请开发者在界面上提示用户连接已断开, 而且正在重新建立连接
+                console.log('即将重连');
+                console.log(obj.retryCount);
+                console.log(obj.duration);
+            }
+
+            function onDisconnect(error) {
+                // 此时说明 SDK 处于断开状态, 开发者此时应该根据错误码提示相应的错误信息, 并且跳转到登录页面
+                console.log('丢失连接');
+                console.log(error);
+                if (error) {
+                    switch (error.code) {
+                        // 账号或者密码错误, 请跳转到登录页面并提示错误
+                        case 302:
+                            break;
+                        // 重复登录, 已经在其它端登录了, 请跳转到登录页面并提示错误
+                        case 417:
+                            break;
+                        // 被踢, 请提示错误后跳转到登录页面
+                        case 'kicked':
+                            break;
+                        default:
+                            break;
+                    }
+                }
+            }
+
+            function onError(error) {
+                console.log(error);
+            }
+        };
+
+
+        //初始化视频的sdk
+        function InintWebSDK() {
+            // SDK重命名
+            NIM.use(WebRTC);
+            var Netcall = WebRTC;
+            this.netcall = Netcall.getInstance({
+                nim: nim,
+                container: document.getElementById('one'),
+                remoteContainer: document.getElementById('two'),
+                // 是否开启日志打印
+                debug: true
+            });
+
+            console.log('初始化成功');
+
+        };
+
+
+        //创建房间
+        function InintRoom() {
+            netcall.createChannel({
+                channelName: 'room2', //必填
+                custom: '测试自定义数据', //可选
+                webrtcEnable: true // 是否支持WebRTC方式接入，可选，默认为不开启
+            }).then(function (obj) {
+                alert('创建房间成功');
+                // 预定房间成功后的上层逻辑操作
+                // eg: 初始化房间UI显示
+                // eg: 加入房间
+
+            })
+        };
+
+
+        //切换角色
+        function changeRoom() {
+            // 切换为互动者
+            netcall = this.netcall
+            netcall.changeRoleToPlayer().then(function (obj) {
+                console.log('切换成功，当前角色', obj)
+                alert('切换摄像头成功')
+            })
+        };
+
+
+        //切换角色
+        function start() {
+            // 切换为互动者
+            netcall = this.netcall
+            var Netcall = WebRTC;
+
+            netcall.startDevice({
+                type: Netcall.DEVICE_TYPE_AUDIO_IN
+            })
+                .then(function () {
+                    // 通知对方自己开启了麦克风
+                    netcall.control({
+                        command: Netcall.NETCALL_CONTROL_COMMAND_NOTIFY_AUDIO_ON
+                    })
+                })
+                .catch(function (err) {
+                    console.log('启动麦克风失败')
+                    console.log(err)
+                })
+
+            // 开启摄像头
+            netcall.startDevice({
+                type: Netcall.DEVICE_TYPE_VIDEO,
+                width: 640,
+                height: 480
+            })
+                .then(function () {
+                    // 通知对方自己开启了摄像头
+                    netcall.control({
+                        command: Netcall.NETCALL_CONTROL_COMMAND_NOTIFY_VIDEO_ON
+                    })
+                })
+                .catch(function (err) {
+                    // 通知对方自己的摄像头不可用
+                    netcall.control({
+                        command: Netcall.NETCALL_CONTROL_COMMAND_SELF_CAMERA_INVALID
+                    })
+                    console.log('启动摄像头失败')
+                    console.error(err)
+                })
+
+        };
+
+
+        //进入房间
+        function GetInRoom() {
+            alert('进入房间')
+            netcall = this.netcall
+            var Netcall = WebRTC;
+            const sessionConfig = {
+                videoQuality: Netcall.CHAT_VIDEO_QUALITY_HIGH,
+                videoFrameRate: Netcall.CHAT_VIDEO_FRAME_RATE_15,
+                videoEncodeMode: Netcall.CHAT_VIDEO_ENCODEMODE_NORMAL,
+                videoBitrate: 0,
+                recordVideo: false,
+                recordAudio: false,
+                highAudio: false,
+                bypassRtmp: false,
+                rtmpUrl: '',
+                rtmpRecord: false,
+                splitMode: Netcall.LAYOUT_SPLITLATTICETILE
+            }
+            netcall.joinChannel({
+                channelName: 'room2', //必填
+                type: Netcall.NETCALL_TYPE_VIDEO,
+                sessionConfig: sessionConfig
+            }).then(function (obj) {
+
+                var roomid = netcall.channelId
+                alert('当前房间的id是' + roomid)
+
+                // 开启麦克风
+                return netcall.startDevice({
+                    type: Netcall.DEVICE_TYPE_AUDIO_IN
+                }).catch(function (err) {
+                    console.log('启动麦克风失败')
+                    console.error(err)
+                })
+
+                    .then(function () {
+                        // 设置采集音量
+                        netcall.setCaptureVolume(255)
+                        // 开启摄像头
+                        return netcall.startDevice({
+                            type: Netcall.DEVICE_TYPE_VIDEO,
+                            width: 750,
+                            height: 480
+                        })
+                            .catch(function (err) {
+                                console.log('启动摄像头失败')
+                                console.error(err)
+                            })
+
+                    })
+                    .then(function () {
+                        // 设置本地预览画面大小
+                        netcall.setVideoViewSize({
+                            with: 500,
+                            height: 500,
+                            cut: true
+                        })
+                    })
+                    .then(function () {
+                        // 设置互动者角色
+                        netcall.changeRoleToPlayer()
+                        var node = document.getElementById('one')
+                        netcall.startLocalStream(node)
+                        console.log('开启本地预览成功')
+                        // 开启RTC连接
+                        console.log("开始webrtc")
+                        netcall.startRtc()
+                    })
+                    .then(function () {
+                        console.log("webrtc连接成功")
+                    })
+                    .catch(function (err) {
+                        console.log('发生错误, 挂断通话')
+                        console.log(err)
+                        netcall.hangup()
+                    })
+
+                //在回调里监听对方加入通话，并显示对方的视频画面
+                netcall.on('joinChannel', function (obj) {
+                    console.log('user join', obj)
+                    alert('有人进来啦啦啦啦')
+                    alert('哈哈哈哈哈哈哈哈')
+                    // 播放对方声音
+                    netcall.startDevice({
+                        type: Netcall.DEVICE_TYPE_AUDIO_OUT_CHAT
+                    }).catch(function (err) {
+                        console.log('播放对方的声音失败')
+                        console.error(err)
+                    })
+                    // 预览对方视频画面
+                    netcall.startRemoteStream({
+                        account: obj.account,
+                        node: document.getElementById('two')
+                    })
+                    alert('预览视频成功')
+                    // 设置对方预览画面大小
+                    netcall.setVideoViewRemoteSize({
+                        account: 'testAccount',
+                        with: 500,
+                        height: 500,
+                        cut: true
+                    })
+                })
+
+
+                alert('222222222')
+
+                // 在回调里监听对方加入通话，并显示对方的视频画面
+                netcall.on('joinChannel', function (obj) {
+                    console.log('user join', obj)
+                    // 播放对方声音
+                    netcall.startDevice({
+                        type: Netcall.DEVICE_TYPE_AUDIO_OUT_CHAT
+                    })
+                        .catch(function (err) {
+                            console.log('播放对方的声音失败')
+                            console.error(err)
+                        })
+                    // 预览对方视频画面
+                    netcall.startRemoteStream({
+                        account: obj.account,
+                        node: document.getElementById('two')
+                    })
+                    // 设置对方预览画面大小
+                    netcall.setVideoViewRemoteSize({
+                        account: 'testAccount',
+                        with: 500,
+                        height: 500,
+                        cut: true
+                    })
+                })
+
+            })
+        };
+
+
+        document.getElementById('connect-sdk').addEventListener('click',
+            function () {
+                connectSDK(); //链接sdk
+                InintWebSDK(); //初始化sdk
+
+            });
+
+
+        document.getElementById('open').addEventListener('click',
+            function () {
+
+                GetInRoom() //进入房间
+
+            });
+
+
+        document.getElementById('create').addEventListener('click',
+            function () {
+
+                InintRoom(); //创建房间
+
+            });
+
+
+        document.getElementById('change').addEventListener('click',
+            function () {
+                changeRoom(); //创建房间
+            });
+
+
+        document.getElementById('start').addEventListener('click',
+            function () {
+                start(); //创建房间
+            });
+
+    };
+</script>
+
+
 </body>
+
 </html>
