--- a/myapp/public/liveVideo.html
+++ b/myapp/public/liveVideo.html
@@ -3,120 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>聊天室测试</title>
-    <link rel="stylesheet" href="./stylesheets/chartroom.css"/>
+    <link rel="stylesheet" href="./stylesheets/style.css"/>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
-<div class="m-head">
-    <div class="g-doc">
-        <div class="logo item">聊天室demo</div>
-        <div class="nav item">
-            <a href="../index.html">DEMO首页</a>
+
+
+<div class="">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">在线课程</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <div class="room-out">
+        <div class="row">
+            <div class="col-md-6 my-player1" id="one">
+            </div>
+            <div class="col-md-6 my-player2" id="two">
+            </div>
+
         </div>
-        <div class="nav item">
-            <a href="./list.html">聊天室首页</a>
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default" id="create">创建房间</button>
+            </div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default" id="open">开启摄像头</button>
+            </div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default" id="full">全屏</button>
+            </div>
         </div>
-        <div class="info item">
-            <img src="/TtaiWeb/static/webdemo/im/chatroom/images/default-icon.png" alt="头像" id="avatar">
-            <!--a href="./roomManage.html" id="nickName">匿名</a-->
-            <span id="nickName">匿名</span>
-            <a href="./login.html" id="chatroom-login">登录</a>
-            <a id="chatroom-logout">注销</a>
-        </div>
-        <div class="action item">
-            <a href="./anchor.html">
-                <b class="icon"></b>我要当主播</a>
-        </div>
+
     </div>
+
+
+    <!--<button id="create">创建房间</button>-->
+    <!--<button id="open">开启摄像头</button>-->
+    <!--<button id="full">全屏</button>-->
+
 </div>
-<div class="g-doc">
-    <div class="m-room" id="room">
-        <div class="g-left">
-            <div class="info">
-                <div class="avatar">
-                    <img class="image" id="roomAvatar"
-                         src="/TtaiWeb/static/webdemo/im/chatroom/images/default-icon.png"/>
-                </div>
-                <div class="detail">
-                    <p class="title" id="roomTitle">房间名</p>
-                    <p class="desc">主播：
-                        <span id="roomCreator"></span>&nbsp;&nbsp;在线人数：
-                        <span id="roomOnlineMemberNum"></span>
-                    </p>
-                </div>
-            </div>
-            <div class="media" id="one">
-                <img src="" class="hide">
-            </div>
-            <div class="media" id="two">
-                <img src="" class="hide">
-            </div>
-        </div>
-        <div class="g-right">
-
-            <div class="announcement_title">
-                直播公告
-            </div>
-            <div class="announcement" id="roomAnnouncement">
-            </div>
-            <ul class="tab">
-                <li class="crt j-tab" data-value="chat">直播互动</li>
-                <li class="j-tab" data-value="member">在线成员</li>
-            </ul>
-            <div class="chat j-pannel j-chat">
-            </div>
-            <div class="member j-pannel hide">
-                <div class="list j-member">
-                </div>
-                <div class="more j-more">
-                    <a>加载更多</a>
-                </div>
-            </div>
-            <div id="chatroom-verified">
-                <div class="edit">
-                    <textarea class="editText" id="editText" placeholder="Ctrl+Enter快速发送"></textarea>
-                </div>
-                <div class="sendBtn">
-                    <div id="emojiTag"></div>
-                    <a class="u-btn btn" id="sentText">发送</a>
-                    <a class="btn custom" id="customBtn"></a>
-                    <a class="btn emoji" id="emoji"></a>
-                </div>
-            </div>
-            <div id="chatroom-anonymous">
-                <button id="connect-sdk">登陆直播室</button>
-            </div>
-            <div id="chatroom-anonymous">
-                <button id="create">创建房间</button>
-            </div>
-            <div id="chatroom-anonymous">
-                <button id="open">开启摄像头</button>
-            </div>
-
-            <div id="chatroom-anonymous">
-                <button id="change">切换角色</button>
-            </div>
 
 
-            <div id="chatroom-anonymous">
-                <button id="start">开启摄像头</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="menu" class="m-menu" style="display:none">
-    <ul>
-        <li class="j-item j-kick" data-type="0" title="移除直播室">踢人</li>
-        <li class="j-item j-gag" data-type="1" title="禁止发言">禁言</li>
-        <li class="j-item j-black" data-type="2" title="永久不能进入该直播间">拉黑该用户</li>
-        <li class="j-item admin j-admin" data-type="3">任命管理员</li>
-    </ul>
-</div>
 <script src="./javascripts/NIM_Web_NIM_v5.0.0.js"></script>
 <script src="./javascripts/NIM_Web_WebRTC_v5.0.0.js"></script>
 <script src="./javascripts/js.cookie.js"></script>
 <script src="./javascripts/axios.js"></script>
-
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
 <script type="text/javascript">
     var config = {
@@ -125,9 +71,9 @@
         //ttai
         // ip:'http://192.168.43.172:8081',
         // 外网
-        ip: 'https://www.wosieger.com'
+        // ip: 'https://www.wosieger.com'
         //https
-        // ip: 'https://www.jiehuhu.top',
+        ip: 'https://www.jiehuhu.top',
         // https:'https://192.168.0.133'
 
     }
@@ -296,7 +242,6 @@
                 if ($siegerRole === 'teacher') {
                     var roomid = netcall.channelId
                     var param = new URLSearchParams();//https://www.jianshu.com/p/042632dec9fb 适配spring mvc
-                    alert(roomid)
                     param.append(roomid, roomid);
                     axios({
                         method: 'post',
@@ -336,11 +281,13 @@
                     })
                     .then(function () {
                         // 设置本地预览画面大小
+                        // alert('开始设置预览画面')
                         netcall.setVideoViewSize({
-                            with: 500,
-                            height: 500,
+                            with: 1000,
+                            height: 1000,
                             cut: true
                         })
+                        // alert('设置完成')
                     })
                     .then(function () {
                         // 设置互动者角色
@@ -434,8 +381,22 @@
 
         document.getElementById('open').addEventListener('click',
             function () {
-
                 GetInRoom() //进入房间
+
+            });
+
+        document.getElementById('full').addEventListener('click',
+            function () {
+                var de = $('#one').children().children()[0];
+                console.log(de)
+                if (de.requestFullscreen) {
+                    de.requestFullscreen();
+                } else if (de.mozRequestFullScreen) {
+                    de.mozRequestFullScreen();
+                } else if (de.webkitRequestFullScreen) {
+                    de.webkitRequestFullScreen();
+                }
+
 
             });
 
